force-app/main/default/objects/SOLXYZCSO001__Remark__c/fields/SOLXYZCSO001__Default__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__Default__c</fullName>
    <defaultValue>true</defaultValue>
    <label>デフォルト</label>
    <type>Checkbox</type>
</CustomField>