force-app/main/default/objects/SOLXYZCSO001__Remark__c/fields/SOLXYZCSO001__RemarkContent__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__RemarkContent__c</fullName>
    <description>備考欄の内容</description>
    <inlineHelpText>備考欄の内容</inlineHelpText>
    <label>備考内容</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>