force-app/main/default/objects/SOLXYZCSO001__Remark__c/fields/SOLXYZCSO001__RemarkName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__RemarkName__c</fullName>
    <description>備考名</description>
    <inlineHelpText>Remarks name</inlineHelpText>
    <label>備考名</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>